@@ -1,0 +1,5 @@
+{% load cms_admin cms_tags %}
+
+{% for plugin in instance.child_plugin_instances %}
+	{% render_plugin_toolbar_config plugin %}
+{% endfor %}
