@@ -65,6 +65,7 @@ if __name__ == '__main__':
         'cms.test_utils.project.bunch_of_plugins',
         'cms.test_utils.project.extensionapp',
         'cms.test_utils.project.mti_pluginapp',
+        'cms.test_utils.project.nested_plugins_app',
     ]
 
     INSTALLED_APPS = [
