@@ -47,6 +47,8 @@
 * Fixed a bug where Django Compressor could not be used on the sekizai ``js``
   block.
 * Fixed an encoding error when running the ``publisher-publish`` command.
+* Fixed regression introduced in 3.3.0 when using the
+  ``render_plugin_toolbar_config`` template tag directly.
 
 
 === 3.3.0 (2016-05-26) ===
